examples/hpa/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /XML
            pathType: Prefix
            backend:
              service:
                name: external-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pod-info-service
                port:
                  number: 80
